--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ services:
 stages:
 - quality
 - build
-- test
 - publish
 - deploy
 
@@ -27,23 +26,13 @@ flake8:
   - pip install flake8
   - flake8 server
 
-build:
-  stage: build
-  variables:
-    GIT_DEPTH: 5
-    GIT_STRATEGY: fetch
-  script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-  - docker build -t $DOCKER_TEST_IMAGE .
-  - docker push $DOCKER_TEST_IMAGE
-
 test:
   image: $DOCKER_TEST_IMAGE
-  stage: test
+  stage: quality
   services:
   - postgres
   script:
-  - cd /var/www
+  #- cd /var/www
   - pip install coverage
   - coverage run manage.py test -v 2 --debug-mode
   - coverage report -m > coverage.log
@@ -56,6 +45,18 @@ test:
     paths:
     - coverage.log
     - coverage.dat
+  dependencies:
+  - flake8
+
+build:
+  stage: build
+  variables:
+    GIT_DEPTH: 5
+    GIT_STRATEGY: fetch
+  script:
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+  - docker build -t $DOCKER_TEST_IMAGE .
+  - docker push $DOCKER_TEST_IMAGE
 
 publish-dev:
   stage: publish
@@ -89,3 +90,5 @@ deploy-dev:
     url: http://${DEV_HOST}/admin/
   only:
   - master
+  when:
+    manual
