--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,18 +27,25 @@ flake8:
   - pip install flake8
   - flake8 server
 
-test:
-  image: python:3.6-alpine3.6
-  stage: test
+build:
+  stage: build
   variables:
     GIT_DEPTH: 5
     GIT_STRATEGY: fetch
+  script:
+  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+  - docker build -t $DOCKER_TEST_IMAGE .
+  - docker push $DOCKER_TEST_IMAGE
+
+test:
+  image: $DOCKER_TEST_IMAGE
+  stage: test
+  variables:
     DJANGO_ENV: 'test'
   services:
   - postgres
   script:
-  #- cd /var/www
-  - ls -l
+  - cd /var/www
   - pip install coverage
   - coverage run manage.py test -v 2 --debug-mode
   - coverage report -m > coverage.log
@@ -49,16 +56,6 @@ test:
     paths:
     - coverage.log
     - coverage.dat
-
-build:
-  stage: build
-  variables:
-    GIT_DEPTH: 5
-    GIT_STRATEGY: fetch
-  script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-  - docker build -t $DOCKER_TEST_IMAGE .
-  - docker push $DOCKER_TEST_IMAGE
 
 publish-dev:
   stage: publish
