--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "{{cookiecutter.project_slug}}"
 version = "0.1.0"
-description = "{{cookiecutter.project_description}}"
-authors = ["{{cookiecutter.project_author}}"]
+description = "{{cookiecutter.description}}"
+authors = ["{{cookiecutter.author_name}}"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
