--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -46,7 +46,7 @@ norecursedirs = *.egg .eggs dist build docs .tox .git __pycache__
 
 addopts =
   -p no:warnings
-  --tb=line
+  --tb=short
   --showlocals
   -ra
   --nomigrations
