--- a/{{cookiecutter.project_slug}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab-ci.yml
@@ -2,28 +2,29 @@ image: docker:latest
 
 variables:
   DOCKER_DRIVER: overlay2
-  DOCKER_TEST_IMAGE: ${CI_REGISTRY_IMAGE}:_${CI_COMMIT_REF_NAME}
+  DOCKER_TEST_IMAGE: ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}
   DOCKER_DEV_IMAGE: ${CI_REGISTRY_IMAGE}:dev
   DOCKER_PROD_IMAGE: ${CI_REGISTRY_IMAGE}:prod
   GIT_STRATEGY: none
 
 services:
-- docker:dind
+  - docker:dind
 
 stages:
-- quality
-- build
-- test
+  - quality
+  - build
+  - test
+  - publish
+  - deploy
 
-flake8:
-  image: python:3.6-alpine3.6
+quality:
+  image: junte/python-quality
   stage: quality
   variables:
     GIT_DEPTH: 5
     GIT_STRATEGY: fetch
   script:
-  - pip install flake8
-  - flake8 server
+    - make check_quality
 
 build:
   stage: build
@@ -31,9 +32,9 @@ build:
     GIT_DEPTH: 5
     GIT_STRATEGY: fetch
   script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-  - docker build -t $DOCKER_TEST_IMAGE .
-  - docker push $DOCKER_TEST_IMAGE
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+    - docker build -t $DOCKER_TEST_IMAGE -f docker/Dockerfile .
+    - docker push $DOCKER_TEST_IMAGE
 
 test:
   image: $DOCKER_TEST_IMAGE
@@ -41,51 +42,52 @@ test:
   variables:
     DJANGO_ENV: 'test'
   services:
-  - postgres
+    - postgres
   script:
-  - cd /var/www
-  - pip install coverage
-  - coverage run manage.py test -v 2 --debug-mode
-  - coverage report -m > coverage.log
-  - cat coverage.log | tail -n 1
-  - mv coverage.* $CI_PROJECT_DIR
+    - cd /var/www
+    - pip install pytest-django pytest-xdist pytest-cov factory-boy
+    - pytest -n auto --dist=loadscope --cov=apps --cov-report=html:coverage_html
+    - mkdir $CI_PROJECT_DIR/coverage
+    - coverage report -m > $CI_PROJECT_DIR/coverage/report.log
+    - cat $CI_PROJECT_DIR/coverage/report.log | tail -n 1
+    - mv coverage_html $CI_PROJECT_DIR/coverage/html
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/'
   artifacts:
     paths:
-    - coverage.log
-    - coverage.dat
+      - coverage
 
 publish-dev:
   stage: publish
+  dependencies: []
   script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-  - docker pull $DOCKER_TEST_IMAGE
-  - docker tag $DOCKER_TEST_IMAGE $DOCKER_DEV_IMAGE
-  - docker push $DOCKER_DEV_IMAGE
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+    - docker pull $DOCKER_TEST_IMAGE
+    - docker tag $DOCKER_TEST_IMAGE $DOCKER_DEV_IMAGE
+    - docker push $DOCKER_DEV_IMAGE
   only:
-  - master
+    - master
 
-publish-prod:
+.publish-prod:
   stage: publish
+  dependencies: []
   script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-  - docker pull $DOCKER_TEST_IMAGE
-  - docker tag $DOCKER_TEST_IMAGE $DOCKER_PROD_IMAGE
-  - docker push $DOCKER_PROD_IMAGE
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
+    - docker pull $DOCKER_TEST_IMAGE
+    - docker tag $DOCKER_TEST_IMAGE $DOCKER_PROD_IMAGE
+    - docker push $DOCKER_PROD_IMAGE
   only:
-  - prod
+    - prod
 
 deploy-dev:
-  image: slapshin1988/ssh-agent
   stage: deploy
+  image: junte/ssh-agent
+  dependencies: []
   variables:
     SSH_PRIVATE_KEY: $SSH_DEV_PRIVATE_KEY
   script:
-  - ssh deploy@${DEV_HOST} "/opt/deploy/deploy.sh"
+    - ssh deploy@${DEV_HOST} "/opt/deploy/deploy.sh"
   environment:
     name: dev
-    url: http://${DEV_HOST}/admin/
+    url: https://${DEV_HOST}/admin/
   only:
-  - master
-  when:
-    manual
+    - master
