[#] development, production settings, ci/cd cache

--- a/{{cookiecutter.project_slug}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab-ci.yml
@@ -5,6 +5,7 @@ variables:
   DOCKER_TEST_IMAGE: ${CI_REGISTRY_IMAGE}/${CI_COMMIT_REF_SLUG}:${CI_COMMIT_SHA}
   DOCKER_DEV_IMAGE: ${CI_REGISTRY_IMAGE}:dev
   DOCKER_PROD_IMAGE: ${CI_REGISTRY_IMAGE}:prod
+  DOCKER_CACHE_IMAGE: $CI_REGISTRY_IMAGE:cache
   GIT_STRATEGY: none
 
 services:
@@ -33,8 +34,10 @@ build:
     GIT_STRATEGY: fetch
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-    - docker build -t $DOCKER_TEST_IMAGE -f docker/Dockerfile .
+    - docker pull $DOCKER_CACHE_IMAGE || true
+    - docker build --cache-from $DOCKER_CACHE_IMAGE -t $DOCKER_TEST_IMAGE -f deploy/Dockerfile .
     - docker push $DOCKER_TEST_IMAGE
+    - docker push $DOCKER_CACHE_IMAGE
 
 test:
   image: $DOCKER_TEST_IMAGE
