--- a/{{cookiecutter.project_slug}}/deploy/server/uwsgi.ini
+++ b/{{cookiecutter.project_slug}}/deploy/server/uwsgi.ini
@@ -1,9 +1,10 @@
 [uwsgi]
-chdir           = /var/www
+chdir           = /app
 module          = server.wsgi
 master          = true
 processes       = 2
 vacuum          = true
-socket          = /var/run/django.sock
 chmod-socket    = 666
+max-requests    = 5000
+socket          = /var/run/django.sock
 stats           = /var/run/django.stats.socket
