--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "django-starter-kit"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Junte Ltd <tech@junte.ru>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
