--- a/{{cookiecutter.project_slug}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_slug}}/.gitlab-ci.yml
@@ -1,24 +1,27 @@
-image: docker:latest
+image: registry.gitlab.com/junte/docker-hub/docker:19
 
 variables:
-  DOCKER_TEST_IMAGE: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG:$CI_COMMIT_SHA
-  DOCKER_CACHE_IMAGE: $CI_REGISTRY_IMAGE:latest
-  DOCKER_IMAGE: $CI_REGISTRY_IMAGE:$CI_PIPELINE_IID
-  GIT_STRATEGY: none
+  DOCKER_CACHE_IMAGE: $CI_REGISTRY_IMAGE/cache
+  DOCKER_IMAGE: $CI_REGISTRY_IMAGE/tmp:${CI_PIPELINE_ID}_${CI_COMMIT_SHA}
+  DOCKER_TEST_IMAGE: $CI_REGISTRY_IMAGE/tmp:${CI_PIPELINE_ID}_${CI_COMMIT_SHA}_test
 
 stages:
+  - pre_build
   - build
   - test
   - publish
   - deploy
 
+dockerfile:lint:
+  image: registry.gitlab.com/junte/docker-hub/hadolint/hadolint:v1.19.0-44-gf364c91-debian
+  stage: pre_build
+  script:
+    - hadolint deploy/Dockerfile
+
 build:
   stage: build
-  variables:
-    GIT_DEPTH: 5
-    GIT_STRATEGY: fetch
   services:
-    - docker:dind
+    - registry.gitlab.com/junte/docker-hub/docker:19-dind
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker pull $DOCKER_CACHE_IMAGE || true
@@ -34,7 +37,6 @@ quality:
   stage: test
   script:
     - cd /app
-    - export PATH="$PATH:$HOME/.poetry/bin"
     - make check_quality
 
 test:
@@ -56,31 +58,37 @@ test:
     paths:
       - coverage
 
-.publish_master:
+.publish:base:
   stage: publish
   dependencies: []
   services:
-    - docker:dind
-  script:
+    - registry.gitlab.com/junte/docker-hub/docker:19-dind
+  before_script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker pull $DOCKER_IMAGE
-    - docker tag $DOCKER_IMAGE $CI_REGISTRY_IMAGE:dev
-    - docker push $CI_REGISTRY_IMAGE:dev
+  script:
+    - docker tag $DOCKER_IMAGE $TARGET_IMAGE
+    - docker push $TARGET_IMAGE
+
+publish:unstable:
+  extends: .publish:base
   only:
     - master
+  variables:
+    TARGET_IMAGE: $CI_REGISTRY_IMAGE/unstable:${CI_PIPELINE_ID}
 
-.deploy_master:
-  image: junte/helm-deploy:1.2-helm2.16.1
+
+.deploy:base:
+  image: registry.gitlab.com/junte/docker-hub/curl:7.72.0
   stage: deploy
   dependencies: []
-  variables:
-    GIT_DEPTH: 5
-    GIT_STRATEGY: fetch
-    HELM_IMAGE_TAG: $CI_PIPELINE_IID
   script:
-    - helm_deploy
-  environment:
-    name: production
-    url: $SITE_ADDRESS
+    - curl -k -X POST -d "component=${DEPLOYER_COMPONENT}&key=${DEPLOYER_KEY}&tag=${CI_PIPELINE_ID}" ${DEPLOYER_HOST}
+
+deploy:development:
+  extends: .deploy:base
   only:
     - master
+  environment:
+    name: development
+    url: $SITE_ADDRESS
