--- a/{{cookiecutter.project_slug}}/deploy/nginx/nginx.conf
+++ b/{{cookiecutter.project_slug}}/deploy/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
     include /etc/nginx/mime.types;
 
     upstream django {
-        server unix:/var/run/django.sock;
+        server unix:/var/run/app/gunicorn.sock;
     }
 
     server {
@@ -33,8 +33,10 @@ http {
         }
 
         location / {
-            include /etc/nginx/uwsgi_params;
-            uwsgi_pass django;
+            proxy_set_header Host $http_host;
+            proxy_redirect off;
+            proxy_buffering off;
+            proxy_pass http://django;
         }
     }
 }
