--- a/{{cookiecutter.project_slug}}/deploy/Dockerfile
+++ b/{{cookiecutter.project_slug}}/deploy/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim as base
+FROM python:3.8.6-slim as base
 
 ENV C_FORCE_ROOT=true \
     # python
@@ -23,16 +23,21 @@ WORKDIR /app
 COPY pyproject.toml poetry.lock ./
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-RUN apt update \
-    && apt-get install -y gcc \
-                      binutils \
-                      gettext \
-                      nginx \
-                      make \
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y \
+                      gcc=4:8.3.* \
+                      binutils=2.31.* \
+                      gettext=0.19.* \
+                      nginx=1.14.* \
+                      make=4.2.* \
+                      curl=7.64.* \
     && curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/${POETRY_VERSION}/get-poetry.py | python \
     && poetry install --no-dev --no-ansi \
     && apt-get remove --purge -y gcc binutils \
-    && apt-get autoremove -y
+    && apt-get autoremove -y \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf "$POETRY_CACHE_DIR"
 
 # ---
 
