--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -20,20 +20,20 @@ inline-quotes = double
 nested-classes-whitelist = Meta, Arguments, Media
 
 # Excluding some directories:
-exclude = .git,
-          __pycache__,
-          .venv,
-          .eggs,
+exclude = .git
+          __pycache__
+          .venv
+          .eggs
           *.egg
+          server/*/migrations/*.py
+          deploy/*
 
-ignore = D100, D104, D106, D401, X100, W503, WPS306, WPS317, WPS121, WPS323
+ignore = D100 D104 D106 D401 X100 W503 WPS306 WPS317 WPS121 WPS323 DJ12
 
 per-file-ignores =
-  server/settings/*.py: WPS226, WPS407, WPS412, WPS432
-  server/*/migrations/*.py: WPS102, WPS432, E501, DJ01, WPS318, WPS319, C101,
-  WPS114, WPS301, D101, D103, Q000, WPS221, I001
-  tests/*.py: S101, WPS432, WPS226, WPS442, S106
-  server/*/**/__init__.py: F401, WPS300, WPS412
+  server/settings/*.py: WPS226 WPS407 WPS412 WPS432
+  tests/*.py: S101 WPS432 WPS226 WPS442 S106
+  server/*/**/__init__.py: F401 WPS300 WPS412
   server/*/admin/*.py: WPS226
   server/__init__.py: WPS412
 
@@ -65,7 +65,7 @@ addopts =
   --cov=tests
   --cov-branch
   --cov-report=
-  --cov-fail-under=70
+  --cov-fail-under=65
 
 filterwarnings =
   error
